--- a/jenkins-ci-cd/Jenkinsfile
+++ b/jenkins-ci-cd/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent { docker { image 'node:22.17.0-alpine3.22' } }
     stages {
-        stage('build') {
+        stage('init') {
             steps {
                 sh 'node --version'
             }
